<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/myInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/border_background"
        android:outlineProvider="bounds"
        android:padding="10dp"
        android:text="@string/my_info"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myInfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="164dp"
        android:padding="5sp"
        android:text="@string/name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_text"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/insertButton"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/insert" />

    <Button
        android:id="@+id/retrieveButton"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/insertButton"
        android:text="@string/retrieve" />

</RelativeLayout>
